# kinactive

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml
docs/: conf.py  fetching.rst  index.rst  intro.rst  kinactive.base.rst  kinactive.cli.rst  kinactive.config.rst  kinactive.db.rst  kinactive.distances.rst  kinactive.features.rst  kinactive.io.rst  kinactive.model.rst  kinactive.resources.rst  kinactive.rst  modules.rst  requirements.txt
docs/notebooks/: build_raw_database.ipynb  calculate_default_variables.ipynb  tutorial.ipynb
kinactive/: __about__.py  __init__.py  base.py  cli.py  config.py  db.py  distances.py  features.py  io.py  model.py  parsers.py
kinactive/resources/: PF00069.hmm  PF07714.hmm  __init__.py  data_links.json  tk2pk.json
kinactive/resources/models/AAIO_STk_XGB_classifier/: features.txt  model.json  params.json
kinactive/resources/models/AAIO_Tk_XGB_classifier/: features.txt  model.json  params.json
kinactive/resources/models/AHAO_STk_XGB_classifier/: features.txt  model.json  params.json
kinactive/resources/models/AHAO_Tk_XGB_classifier/: features.txt  model.json  params.json
kinactive/resources/models/DFG_classifier/d1_regressor/: features.txt  params.json  targets.txt
kinactive/resources/models/DFG_classifier/d2_regressor/: features.txt  params.json  targets.txt
kinactive/resources/models/DFG_classifier/in_classifier/: features.txt  params.json  targets.txt
kinactive/resources/models/DFG_classifier/inter_classifier/: features.txt  params.json  targets.txt
kinactive/resources/models/DFG_classifier/meta_classifier/: features.txt  params.json  targets.txt
kinactive/resources/models/DFG_classifier/other_classifier/: features.txt  params.json  targets.txt
kinactive/resources/models/DFG_classifier/out_classifier/: features.txt  params.json  targets.txt
kinactive/resources/models/TkST_XGB_classifier/: features.txt  model.json  params.json  targets.txt
kinactive/resources/models/kinactive_classifier/: features.txt  params.json  targets.txt
test/: test_model.py  test_parsers.py
