[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kinactive"
description = 'Protein kinases annotation and feature extraction'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Ivan Reveguk", email = "ivan.reveguk@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "lXtractor>=0.1.1",
    "xgboost",
    "toolz",
    "tqdm",
    "more-itertools",
    "pandas",
    "scikit-learn",
    "optuna",
    "eboruta>0.1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/edikedik/kinactive#readme"
Issues = "https://github.com/edikedik/kinactive/issues"
Source = "https://github.com/edikedik/kinactive"

[project.scripts]
kinactive = "kinactive.cli:kinactive"

[tool.hatch.version]
path = "kinactive/__about__.py"
